fixed css bug - toggling visibility moves other elements

--- a/src/pages/password-strength-checker/components/password-input/password-input.scss
+++ b/src/pages/password-strength-checker/components/password-input/password-input.scss
@@ -1,7 +1,3 @@
-#password-input-container {
-  width: 420px;
-}
-
 #password {
   color: #494949;
   font-size: 20px;
@@ -20,9 +16,8 @@
   font-size: 16px;
   text-align: end;
   position: relative;
-  float: right;
-  top: -46px;
-  left: -3px;
+  top: -48px;
+  left: 358px;
   width: 60px;
   height: 50px;
   border: none;
